fix(card-style): hide the visible button behind the card

--- a/src/ui/table/hand.css
+++ b/src/ui/table/hand.css
@@ -1,32 +1,33 @@
 .hand-container {
-    height: 7rem;
-    width: 12rem;
-    position: relative;
+   height: 7rem;
+   width: 12rem;
+   position: relative;
 }
 
 .hand-card {
-    width: 20em;
-    overflow: hidden;
-    list-style: none;
+   width: 20em;
+   overflow: hidden;
+   list-style: none;
 }
 
 .hand-card-button {
    border: none;
+   background: transparent;
 }
 
 .hand-container > .hand-card {
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-transition: top 0.3s ease, left 0.3s ease;
-  -moz-transition: top 0.3s ease, left 0.3s ease;
-  -o-transition: top 0.3s ease, left 0.3s ease;
-  -ms-transition: top 0.3s ease, left 0.3s ease;
-  transition: top 0.3s ease, left 0.3s ease;
+   position: absolute;
+   top: 0;
+   left: 0;
+   -webkit-transition: top 0.3s ease, left 0.3s ease;
+   -moz-transition: top 0.3s ease, left 0.3s ease;
+   -o-transition: top 0.3s ease, left 0.3s ease;
+   -ms-transition: top 0.3s ease, left 0.3s ease;
+   transition: top 0.3s ease, left 0.3s ease;
 }
 
 .hand-card-button {
-    padding: 0;
-    border-radius: 0;
-    border-thickness: none;
+   padding: 0;
+   border-radius: 0;
+   border-thickness: none;
 }
